--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Resume - Free Responsive HTML5/CSS3 Template</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -65,7 +65,7 @@
       </nav> <!-- end #nav-wrap -->
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Skyler Jefferson.</h1>
+            <h1 class="responsive-headline">I'm M Bilal.</h1>
             <h3>I'm a South LA based <span>middle schooler</span>, <span>web designer</span> and <span>aspiring programmer</span> creating awesome and
             effective visual websites for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn <a class="smoothscroll" href="#about">why I'm awesome!</a>.</h3>
@@ -97,7 +97,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/20180326_143436.png" alt="" />
 
          </div>
 
@@ -105,12 +105,10 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>
+                Hi, I'm an expert WordPress developer with having 4 yr of working experience. I deliver the understanding of website development and front-stop design, Complete WordPress website, Wordpress Seo, Page optimization,Digital marketing, SEO, Product promotion, HTML website,Affiliate & CPA marketing, And in addition to I'm a Graphic designer. By the use of my a couple of skills, I can provide you excellent work and satisfaction. Feel loose to reach out to me, so we will start planning your next project :)
+
+
             </p>
 
             <div class="row">
@@ -119,12 +117,12 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
+						   <span>Muhammad Bilal</span><br>
 						   <span>1600 Amphitheatre Parkway<br>
 						         Mountain View, CA 94043 US
                      </span><br>
 						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+                     <span>mbilal@marty.world</span>
 					   </p>
 
                </div>
@@ -166,11 +164,7 @@
                   <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
+                      Studying Graphic Design is a great choice for creative people who like playing with colours, forms and images and who want to create great visual content to communicate messages. A Bachelor’s or Master’s degree in Graphic Design will teach you all there is to know about typography, page layout techniques, user interface (UI), user experience (UX) and industry-specific software.         </p>
 
                </div>
 
@@ -184,11 +178,7 @@
                   <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
+                      A Bachelor of Arts in Graphic Design is a liberal arts degree that is awarded to students who complete the graphic design undergraduate program. Students earn valuable skills that prepare them to lead in the fields of design and creative visual media.         </p>
 
                </div>
 
@@ -217,13 +207,7 @@
                   <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
-
-               </div>
+                      Learning about how to become a UX designer and then landing a role in the industry are two entirely different things. In fact, a job posting for a “UX Designer” can have all sorts of meanings, not to mention individual interpretations.    </p></div>
 
             </div> <!-- item end -->
 
@@ -235,10 +219,7 @@
                   <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                      UX design focuses on the interaction between real human users (like you and me) and everyday products and services, such as websites, apps, and even coffee machines. It's an extremely varied discipline, combining aspects of psychology, business, market research, design, and technology.Nov
                   </p>
 
                </div>
@@ -260,10 +241,7 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p> I deliver the understanding of website development and front-stop design, Complete WordPress website, Wordpress Seo, Page optimization,Digital marketing, SEO, Product promotion, HTML website,Affiliate & CPA marketing, And in addition to I'm a Graphic designer. By the use of my a couple of skills, I can provide you excellent work and satisfaction. Feel loose to reach out to me, so we will start planning your next project :)
             </p>
 
 				<div class="bars">
@@ -449,7 +427,8 @@
 
 		      <div class="description-box">
 			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <p>The answer to all your questions is just a click away
+                  </p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 		      </div>
 
@@ -721,7 +700,7 @@
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
+						   Muhammad Bilal<br>
 						   1600 Amphitheatre Parkway <br>
 						   Mountain View, CA 94043 US<br>
 						   <span>(123) 456-7890</span>
