--- a/webdesign.html
+++ b/webdesign.html
@@ -158,185 +158,162 @@
 <!-- END FETURED AREA -->
 
 <!-- START ABOUT US AREA -->
-<section id="about" class="about-us-area section-padding">
-  <div class="container">
-    <div class="row">
-      <!-- START SECTION AREA -->
-      <!-- END SECTION DESIGN AREA -->
-
-      <!-- START ABOUT TEXT -->
-
-      <!-- END ABOUT TEXT -->
-      <!-- END ABOUT US AREA -->
-
-      <!-- START TEAM AREA -->
-      <!-- END TEAM AREA -->
-
-      <!-- START WORK AREA -->
-      <section id="work" class="our-work-area gry-bg section-padding">
-        <div class="container">
-          <div class="row">
+<section id="work" class="our-work-area gry-bg section-padding">
+    <div class="container">
+        <div class="row">
             <div class="col-sm-12">
-              <div class="section-title text-center wow zoomIn">
-                <h2>Portfolio</h2>
-                <h3>Each website below was built by one or more of our students.</h3>
-              </div>
+                <div class="section-title text-center wow zoomIn">
+                    <h2>Portfolio</h2>
+                    <h3>Each website below was built by one or more of our students.</h3>
+                </div>
             </div>
-          </div>
 
-          <div class="col-md-4 col-sm-4 mix design video">
+        <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/marty.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="https://marty.world/"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Marty World</h2>
+                <img src="assets/img/marty.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="https://marty.world/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Marty World</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-4 mix design video">
+        </div>
+        <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/brvni.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="http://bevinimodena.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Bevini Modena</h2>
+                <img src="assets/img/brvni.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="http://bevinimodena.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Bevini Modena</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-4 mix design video">
+        </div>
+
+        <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/uni.png" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="http://unitedhands4forall.com/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>United Hands for all</h2>
+                <img src="assets/img/kira.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="http://www.kiramagazine.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>kira Magazine</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-4 mix design video">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/kira.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="http://www.kiramagazine.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>kira Magazine</h2>
+                <img src="assets/img/work/1.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="https://www.cassiebetts.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Travel</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix design video">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix print video">
             <div class="single-work">
-              <img src="assets/img/work/1.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="https://www.cassiebetts.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Travel</h2>
+                <img src="assets/img/work/2.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="business/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Business</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix print video">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix print video">
             <div class="single-work">
-              <img src="assets/img/work/2.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="business/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Business</h2>
+                <img src="assets/img/work/3.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="nonprofit/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Built by<br/>Cameron &amp; Jaiden Smith<br/>Ages 14 &amp; 10</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix print video">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix development video">
             <div class="single-work">
-              <img src="assets/img/work/3.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="nonprofit/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Built by<br/>Cameron &amp; Jaiden Smith<br/>Ages 14 &amp; 10</h2>
+                <img src="assets/img/work/4.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="resume/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Resume</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix development video">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix design print">
             <div class="single-work">
-              <img src="assets/img/work/4.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="resume/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Resume</h2>
+                <img src="assets/img/work/5.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="conference/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Conference</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix design print">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix design development">
             <div class="single-work">
-              <img src="assets/img/work/5.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="conference/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Conference</h2>
+                <img src="assets/img/work/6.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="startup/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Startup</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix design development">
+        </div>
+        <!-- END SINGLE WORK ITEM -->
+        <!-- START SINGLE WORK ITEM -->
+        <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/work/6.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="startup/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Startup</h2>
+                <img src="assets/img/work/8.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="rocketstudios/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <div class="col-md-4 col-sm-4 mix design video">
-            <div class="single-work">
-              <img src="assets/img/work/8.jpg" class="img-responsive" alt="" />
-              <div class="work-details">
-                <div class="overlay"></div>
-                <div class="work_info">
-                  <a href="rocketstudios/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- END SINGLE WORK ITEM -->
-          <!-- START SINGLE WORK ITEM -->
-          <!-- END SINGLE WORK ITEM -->
+        </div>
+
+        </div>
+        <div class="text-center mt-5">
+            <h2>Not Sure of Your Creative Needs?</h2>
+            <p class="f-20">Sign Up For A FREE 15 Minute Consultation:</p>
+            <a href="https://calendly.com/martyw0rld/freeconsultation?back=1&amp;month=2020-11" target="_parent" class="btn btn_01">SCHEDULE MY FREE CONSULTATION</a>
         </div>
     </div>
-  </div>
+
 </section>
+
 <!-- END WORK AREA -->
 
 <!-- START WHAT CLIENT SAY AREA -->
