--- a/webdesign.html
+++ b/webdesign.html
@@ -182,6 +182,18 @@
         </div>
         <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
+                <img src="assets/img/hcc.jpg" class="img-responsive" alt="" />
+                <div class="work-details">
+                    <div class="overlay"></div>
+                    <div class="work_info">
+                        <a href="https://hotandcoolcafe.com/hot-cool-cafe-voting"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                        <h2>Community Voting (Hot and Cool Cafe)</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-4 mix design video">
+            <div class="single-work">
                 <img src="assets/img/brvni.jpg" class="img-responsive" alt="" />
                 <div class="work-details">
                     <div class="overlay"></div>
@@ -293,12 +305,12 @@
         <!-- START SINGLE WORK ITEM -->
         <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-                <img src="assets/img/work/8.jpg" class="img-responsive" alt="" />
+                <img src="assets/img/rs.jpg" class="img-responsive" alt="" />
                 <div class="work-details">
                     <div class="overlay"></div>
                     <div class="work_info">
                         <a href="rocketstudios/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                        <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
+                        <h2>Game Developers</h2>
                     </div>
                 </div>
             </div>
