--- a/business/index.html
+++ b/business/index.html
@@ -98,9 +98,7 @@
                     <ul class="nav navbar-nav navbar-right">
                       <li class="active"><a class="smoth-scroll" href="#home">home</a>
                       </li>
-                      <li><a class="smoth-scroll" href="#" target = "_blank">about</a>
-                      </li>
-                      <li><a class="smoth-scroll" href="#" target = "_blank">workshops</a>
+                      <li><a class="smoth-scroll" href="#about" target = "_blank">about</a>
                       </li>
                       <li><a class="smoth-scroll" href="#team">team</a>
                       </li>
