--- a/resume/index.html
+++ b/resume/index.html
@@ -601,13 +601,13 @@
                      </li> <!-- slide ends -->
 
                      <li>
-                        <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                           </p>
-                           <cite>Mr. Adobe</cite>
-                        </blockquote>
+                         <blockquote>
+                             <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
+                                 to do what you believe is great work. And the only way to do great work is to love what you do.
+                                 If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                             </p>
+                             <cite>Steve Jobs</cite>
+                         </blockquote>
                      </li> <!-- slide ends -->
 
                   </ul>
@@ -637,9 +637,10 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">
+                      <b>Talk to human!</b>
+                      <br>
+                      The answer to all your questions is just a click away
                   </p>
 
             </div>
