--- a/webdesign.html
+++ b/webdesign.html
@@ -183,7 +183,7 @@
                     <div class="work-details">
                         <div class="overlay"></div>
                         <div class="work_info">
-                            <a href="http://bevinimodena.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                            <a href="https://bevinimodena.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
                             <h2>Bevini Modena</h2>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                     <div class="work-details">
                         <div class="overlay"></div>
                         <div class="work_info">
-                            <a href="http://www.kiramagazine.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                            <a href="https://www.kiramagazine.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
                             <h2>kira Magazine</h2>
                         </div>
                     </div>
