--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <title>MISLA - Hire Us to build your website</title>
   <!-- FAVICON -->
   <link rel="shortcut icon" type="image/png" href="assets/img/favicon.ico" />
+  <meta http-equiv="refresh" content="7; url='https://www.misla.org'" />
   <!-- BOOTSTRAP CSS-->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <!-- FONTS -->
