--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <!-- BOOTSTRAP CSS-->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <!-- FONTS -->
-  <meta property="og:image" content="assets/img/preview-misla.png" />
-  <meta property="og:image:secure_url" content="assets/img/preview-misla.png">
-  <meta name="twitter:image" content="assets/img/preview-misla.png">
+  <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png" />
+  <meta property="og:image:secure_url" content="https://www.misla.org/assets/img/preview-misla.png">
+  <meta name="twitter:image" content="https://www.misla.org/assets/img/preview-misla.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet" />
   <!-- FONT-ICONS CSS-->
