--- a/webdesign.html
+++ b/webdesign.html
@@ -21,9 +21,9 @@
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.ico" />
     <!-- BOOTSTRAP CSS-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <meta property="og:image" content="assets/img/preview-misla.png" />
-    <meta property="og:image:secure_url" content="assets/img/preview-misla.png">
-    <meta name="twitter:image" content="assets/img/preview-misla.png">
+    <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png" />
+    <meta property="og:image:secure_url" content="https://www.misla.org/assets/img/preview-misla.png">
+    <meta name="twitter:image" content="https://www.misla.org/assets/img/preview-misla.png">
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
