--- a/webdesign.html
+++ b/webdesign.html
@@ -303,7 +303,7 @@
             <!-- START SINGLE WORK ITEM -->
             <div class="col-md-4 col-sm-4 mix design video">
                 <div class="single-work">
-                    <img src="assets/img/rs.jpg" class="img-responsive" alt="" />
+                    <img src="assets/img/rs1.jpg" class="img-responsive" alt="" />
                     <div class="work-details">
                         <div class="overlay"></div>
                         <div class="work_info">
