--- a/html/chairman-speech.html
+++ b/html/chairman-speech.html
@@ -108,36 +108,17 @@
         <div class="row">
             <div class="col-md-8">
 
-                <p>MISLA, or Made In South LA, is a south los angeles coding bootcamp, originally started in 2014
-                    in South Central Los Angeles by a team of tech &amp; business savvy South LA residents.
-                    <br/>
-                    In a part of town known as “Murderer’s Alley”, MISLA set out to reinvent and redefine the very
-                    infrastructure of South LA, hoping to one day be known as
-                    “Tech Alley” or "Silicon South".
-                    <strong>MISLA believes that
-                        comprehensive training in web design, software programming
-                        and other forms of digital literacy are essential to the survival
-                        of our community and the most competent way of solving the diversity
-                        in tech deficit.
-                    </strong>
-                    At MISLA, underrepresented minorities &amp; low-income
-                    individuals from South LA receive scholarships to train as
-                    a programmers & engineers.
-                    <br/>
-                    We are dedicated to increasing diversity in tech as well as
-                    providing economic growth within the community of South LA by empowering
-                    local startups as well as existing businesses to grow their digital presence.
-                    As a project of <a href="https://www.vsedc.org/" target = "_blank">VSEDC</a>
-                    (Vermont Slauson Economic Development Corporation), we have 501C3 non-profit status.
-                    We are able to award partial and full scholarships to lower income individuals
-                    with priority going to businesses of South LA. Please apply here for partial or
-                    full scholarship opportunities. Please note… Space is limited. We cannot guarantee
-                    your seat in the Bootcamp until your application is approved. Not everyone is approved.
-                    Register now to reserve your seat. We suggest you bring your own laptop but if you do
-                    not have one, one can be provided for you.
-                    <br/>
+                <p>
+                    Since 2014 <a href="http://misla.org/">MISLA</a>- Made In South LA, has provided technology and financial literacy bootcamps on an ongoing basis to both youth and adults alike. Positioning our MISLA participants to be game changers in the tech industry is our overarching intention and we have been able to pair several of our past participants with roles within tech, evidence of the employable curriculum style in which we utilize.
+                    <br> <br>
+                    <b>With full support of <a href="https://vsedc.org/">VSEDC</a>,</b> Vermont Slauson Economic Development Corporation, MISLA is a primary partner within the South LA Best Buy Teen Tech Center/The Clubhouse Network, Sponsored in part by Annenberg Tech, & Pledge LA.
+                    <br><br>
+                    At MISLA (MADE IN SOUTH LA), underrepresented minorities & low-income individuals from South LA receive scholarships to train as programmers, engineers & digital creatives. We are dedicated to increasing diversity in tech as well as providing economic growth within the community of South LA. MISLA believes that comprehensive training in web design, software programming and other forms of digital literacy are essential to the survival of our community and the most competent way of solving the diversity in tech deficit.
+                    <br>    <br>
+                    In the Summer of 2020, MISLA established MARTY- MAKING A REALITY THAT’S YOURS, A Social Enterprise/ Creative Agency with the purpose of training members on-the-job via the full offering of MISLA
                     Click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">here</a>
                     to apply for a MISLA scholarship!
+                    <br>
                     <br/>
                     Click <a href="https://marty.world/services.html" target = "_blank">here</a>
                     to hire our students to create your website.
