--- a/html/chairman-speech.html
+++ b/html/chairman-speech.html
@@ -111,7 +111,7 @@
                 <p>
                     Since 2014 <a href="http://misla.org/">MISLA</a>- Made In South LA, has provided technology and financial literacy bootcamps on an ongoing basis to both youth and adults alike. Positioning our MISLA participants to be game changers in the tech industry is our overarching intention and we have been able to pair several of our past participants with roles within tech, evidence of the employable curriculum style in which we utilize.
                     <br> <br>
-                    <b>With full support of <a href="https://vsedc.org/">VSEDC</a>,</b> Vermont Slauson Economic Development Corporation, MISLA is a primary partner within the South LA Best Buy Teen Tech Center/The Clubhouse Network, Sponsored in part by Annenberg Tech, & Pledge LA.
+                    <b>With full support of <a href="https://vsedc.org/" target="_blank">VSEDC</a>,</b> Vermont Slauson Economic Development Corporation, MISLA is a primary partner within the South LA Best Buy Teen Tech Center/The Clubhouse Network, Sponsored in part by Annenberg Tech, & Pledge LA.
                     <br><br>
                     At MISLA (MADE IN SOUTH LA), underrepresented minorities & low-income individuals from South LA receive scholarships to train as programmers, engineers & digital creatives. We are dedicated to increasing diversity in tech as well as providing economic growth within the community of South LA. MISLA believes that comprehensive training in web design, software programming and other forms of digital literacy are essential to the survival of our community and the most competent way of solving the diversity in tech deficit.
                     <br>    <br>
