--- a/html/chairman-speech.html
+++ b/html/chairman-speech.html
@@ -126,7 +126,7 @@
                 <img src="images/welcom_sign.png" class="img-fluid" alt="welcom-img">
             </div>
             <div class="col-md-4">
-                <img src="images/admission-detail/cass.jpg" class="img-fluid" alt="#">
+                <img src="images/admission-detail/cass.jpg" class="img-fluid" alt="MISLA cassie">
                 <p class="text-center"><strong>Cassie Betts</strong>
                     <br>
                     <span>Founder, MISLA</span></p>
