--- a/webdesign.html
+++ b/webdesign.html
@@ -97,7 +97,7 @@
                                     <li><a class="smoth-scroll" href="webdesign.html">Our Work </a></li>
                                     <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
                                     <li><a class="smoth-scroll" href="#donate">donate</a></li>
-                                    <li><a class="smoth-scroll" href="https://marty.world/press.html" target="_blank">blog</a></li>
+                                    <li><a class="smoth-scroll" href="https://misla.org/blog.html">blog</a></li>
                                     <li><a class="smoth-scroll" href="#contact">contact</a></li>
                                 </ul>
                             </div>
