--- a/html/gallery.html
+++ b/html/gallery.html
@@ -49,7 +49,7 @@
                                   <ul class="dropdown-menu">
                                       <li><a class="dropdown-item" href="../html/chairman-speech.html">About</a></li>
                                       <li><a class="dropdown-item" href="../index.html#team">Team</a></li>
-                                      <li><a class="dropdown-item" href="https://marty.world/press.html" target="_blank">Blog</a></li>
+                                      <li><a class="dropdown-item" href="https://misla.org/blog.html">Blog</a></li>
                                       <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
                                   </ul>
                               </li>
