--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-sm-2">
           <div class="logo">
-            <a href="index.html"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="" /> </a>
+            <a href="index.html"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="Logo" /> </a>
           </div>
         </div>
         <div class="col-sm-10 p-0">
@@ -79,7 +79,7 @@
                   <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
                   <li><a class="smoth-scroll" href="index.html#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
-                  <li><a class="smoth-scroll" href="https://marty.world/press.html" target="_blank">blog</a></li>
+                  <li><a class="smoth-scroll" href="https://misla.org/blog.html">blog</a></li>
                   <li><a class="smoth-scroll" href="#contact">contact</a></li>
                 </ul>
               </div>
