--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
                   <li><a class="smoth-scroll" href="index.html#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
-                  <li><a class="smoth-scroll" href="https://misla.org/blog.html">blog</a></li>
+                  <li><a class="smoth-scroll" href="html/blog.html">blog</a></li>
                   <li><a class="smoth-scroll" href="#contact">contact</a></li>
                 </ul>
               </div>
