--- a/html/stanford-education-by-havingn-no-guidance-to-greatness.html
+++ b/html/stanford-education-by-havingn-no-guidance-to-greatness.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="blog-img_block">
-                    <img src="images/blog.jpg" class="img-fluid" alt="blog-img">
+                    <img src="images/stanford-main-campus-1.jpg" class="img-fluid" alt="blog-img">
                     <div class="blog-date">
                         <span>December 03, 2020</span>
                     </div>
