--- a/html/bootcamp-youtuber.html
+++ b/html/bootcamp-youtuber.html
@@ -246,7 +246,7 @@
             <div class="col-md-3">
                 <div class="address">
                     <h3>Contact us</h3>
-                    <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                    <p>MISLA- A PROJECT OF VSEDC </p>
                     <p>Email : info@misla.org
                         <br> Phone : 323-753-2335</p>
                     <ul class="footer-social-icons">
