--- a/html/faq.html
+++ b/html/faq.html
@@ -247,7 +247,7 @@ What are the entry requirements for your courses?
                 <div class="col-md-3">
                     <div class="address">
                         <h3>Contact us</h3>
-                        <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                        <p>MISLA- A PROJECT OF VSEDC </p>
                         <p>Email : info@misla.org
                             <br> Phone : 323-753-2335</p>
                         <ul class="footer-social-icons">
