--- a/html/images/admission-detail/Computer hardware.html
+++ b/html/images/admission-detail/Computer hardware.html
@@ -258,7 +258,7 @@ This class is designed to provide your student with the tools it takes to be tec
                             <div class="col-md-4">
                               <div class="address">
                                   <h3>Contact us</h3>
-                                  <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                                  <p>MISLA- A PROJECT OF VSEDC </p>
                                   <p>Email : info@misla.org
                                       <br> Phone : 323-753-2335</p>
                                       <ul class="footer-social-icons">
